--- a/public/app.css
+++ b/public/app.css
@@ -290,3 +290,148 @@
 {
     text-align: center;
 }
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    position:relative;
+    /* background-color: #F9F1E9;   */
+    z-index: -1;
+    font-family:Archivo; 
+}
+
+.body {
+   width:100vh;
+   background-color: #F9F1E9;
+}
+
+.back{
+    top:100px;
+    position: absolute;
+    width:100%;
+    z-index: -1;
+}
+
+.product{
+    width:100vw;
+    height:2856px;
+}
+
+nav{
+    a{
+        text-decoration: none;
+    }
+    top:0%;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px auto;
+    font-size: 20px;
+    z-index: 999;
+    position: relative;
+}
+
+.navbar{
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    width: 100%;
+}
+
+.navbar ul{
+    display: flex;
+    justify-content: space-around;
+}
+
+nav ul li a {
+    display: inline-block;
+    padding: 4px;
+    margin: 20px auto 56px auto;
+    text-decoration: none;
+}
+
+nav ul {
+    list-style-type: none;
+    text-align: center;
+}
+
+nav ul li {
+    display: inline;
+}
+
+.navLeft{
+    margin: 20px 80px 58px auto;
+}
+
+.navRight{
+    margin: 20px auto 58px 80px;
+}
+
+.navLogo{
+    padding: 20px 20%;
+    align-items: center;
+}
+
+.navbar li{
+    list-style: none;
+    display: inline-block;
+    padding: 0 20px;
+}
+
+
+
+
+.headline{
+    background-color: transparent;
+    flex-direction: row; 
+    font-size: 130px;
+    text-align: center;
+    font-family: "Noto Serif";
+    font-weight: 300;
+    font-stretch: condensed;
+    letter-spacing: -6;
+    /* gap: -20px; */
+}
+
+.tagline{
+    background-color: transparent;
+    width: 270px;
+    top: 78px;
+    margin:auto;
+    font-size: 15px;
+    text-align: center;
+    font-family: "Archivo";
+    font-stretch:normal;
+    font-weight: 500;
+    z-index: 10;
+}
+
+.upper{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
+.container{
+    background-color: transparent;
+    align-items: center;
+    background: none;
+  }
+
+.tagline{
+    background-color: transparent;
+}
+
+
+
+.ArrowD{
+    left: 50%;
+    right: 50%;
+    margin-top: 13%;
+    justify-content: center;
+    align-items: center;
+}
+
